force-app/main/default/objects/Property__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Sale</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Rental Long</fullName>
            </value>
            <value>
                <fullName>Rental Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>