force-app/main/default/objects/Property__c/fields/Landlord_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>