force-app/main/default/objects/Property__c/fields/Leasehold_Landlord_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Leasehold_Landlord_If_Any__c</fullName>
    <label>Leasehold Landlord(If Any)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>