force-app/main/default/objects/Property__c/fields/Size_m2__c.field-meta.xml
<CustomField>
    <fullName>Size_m2__c</fullName>
    <label>Size m2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>