force-app/main/default/objects/Property__c/fields/Sub_Category_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_Free_Text__c</fullName>
    <label>Sub Category (Free Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>